src/components/CurrentWinner.module.css
.block {
  width: 300px;
  height: 100px;
  justify-content: center;
  justify-self: center;
  align-items: center;
  gap: 2rem;
  z-index: 5;
}

.block p {
  font-size: 15px;
  color: #AAA;
  text-align: center;
  padding: 1rem 0 0 0;
}
.winner {
  cursor: pointer;
  user-select: text;
}

